--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.13",
     "@types/react-redux": "^7.1.23",
+    "@types/react-syntax-highlighter": "^13.5.2",
     "classnames": "^2.3.1",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
